# Azer

./: Cargo.toml  README.md
azer/: Cargo.toml
azer-editor/: Cargo.toml
azer-editor/src/: main.rs  new_layer.rs
azer/src/: lib.rs
azer/src/core/: delta_time.rs  entry_point.rs  event.rs  layer.rs  layer_stack.rs  logger.rs  mod.rs
azer/src/core/application/: app_handler.rs  app_state.rs  mod.rs
azer/src/mesh/: mod.rs  transform2d.rs  transform3d.rs
azer/src/renderer/: camera2d.rs  index_buffer.rs  mesh.rs  mod.rs  render_command.rs  render_context.rs  renderer.rs  renderer_2d.rs  renderer_3d.rs  shader.rs  texture.rs  vertex_buffer.rs  vertex_buffer_layout.rs
azer/src/shaders/: shader.wgsl  shader2d.wgsl
src/: camera_controller_layer.rs  lib.rs  main.rs  new_layer.rs  render_layer.rs
src/api/: mod.rs  shader.rs  vulkan.rs  vulkan_context.rs  vulkan_helper.rs
src/api/shaders/: mod.rs  sd_camera2d.rs
src/core/: application.rs  core.rs  delta_time.rs  event.rs  input.rs  layer.rs  layer_stack.rs  logger.rs  mod.rs
src/render/: mod.rs  render.rs  render_rectangle.rs  render_triangle.rs  renderer.rs
src/render/camera/: camera2d.rs  mod.rs
src/renderer/: frame_commands.rs  image_buffer_man.rs  mod.rs  render_trait.rs  renderer.rs  vertex.rs
src/renderer/camera/: camera2d.rs  camera3d.rs  mod.rs
src/renderer/renderer2d/: mod.rs  render_helper.rs  render_image.rs  render_rectangle.rs  render_triangle.rs
src/renderer/shaders/: batch_render_shader.rs  mod.rs  sd_camera2d.rs  (+1 more)
src/ui/: imgui_renderer.rs  imgui_winit_support.rs  mod.rs
(+10 files in other folders)
