[package]
name = "azer"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = "0.30"
wgpu = "28.0.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
chrono = "0.4.42"

bitflags = "2.10.0"
glam = "0.30.10"
bytemuck = { version = "1.24", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]